<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewRock"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="optionSelected"
        android:src="@drawable/rock"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewPaper"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/paper"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CircleImageViewRock" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewScissor"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/scissors"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/CircleImageViewPaper" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewLizard"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/lizard"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/CircleImageViewSpock" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewSpock"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/spock"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImageViewComputer"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/interrogation"
        app:civ_border_color="@color/colorBlack"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewResults" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />


    <TextView
        android:id="@+id/textViewGameOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:shadowColor="#272626"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="4"
        android:text="@string/game_on"
        android:textColor="@color/colorBlack"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOwnerRights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_game_developed_by_stryke_corp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonHelp"
        android:layout_width="31dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/help_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRules"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/textScore"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewYou"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textYou"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/textViewComputer"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textComputer"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameOn" />


</androidx.constraintlayout.widget.ConstraintLayout>